@startuml
'https://plantuml.com/class-diagram
hide circle
class UserRepositoryBD <<interface>>

title Class Diagram / As User, I want to log in an account



class User{
    -username
    -password
    -role
}

class Role {
    -role
}
class UserViewMapper{
    +toUserView(User user):UserView
}
class UserService{
    +loginExternal(AuthRequest authRequest)
    }
class UserController{
 +login(final AuthRequest request):User
 +loginExternal(final AuthRequest request):User
}

class UserRepository{
    +loginExternal(AuthRequest authRequest): user
}

interface UserRepositoryBD
{
    +findByUsername(String userName): optional<User>
    +save(S entity) : <S extends User>
}

class UserRepositoryExternal{
    +httpLogin(AuthRequest authRequest): user
}


UserController ..> UserService: uses >
UserService ..> UserRepository: uses >
UserRepository ..> UserRepositoryBD: uses >
UserRepository ..> UserRepositoryExternal: uses >
UserRepositoryBD ..> User: < record
UserController ..>UserViewMapper: uses >
User ..> Role : has
@enduml
